<resources>
    <string name="app_name">app_name</string>
    <string name="chat">Чат</string>
    <string name="quiz">Викторина</string>
    <string name="proceed">Продолжить</string>
    <string name="question">Вопрос</string>

    <string name="start_game">Начать игру</string>
    <string name="your_answer">Ваш ответ</string>
    <string name="your_name">Ваше имя</string>
    <string name="message">Сообщение</string>
    <string name="your_message">Ваше сообщение</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="attach_image">Прикрепить фото...</string>

    <string name="name_hint">Введите ваше имя</string>
    <string name="message_hint">Можете написать краткое предложение про любимых животных!</string>

    <string name="quiz_introduction">
        Предлагаем вам сыграть в нашу юбилейную викторину,
        ответьте на десять вопросов о лисах и станьте победителем!
    </string>
</resources>